# advent-of-code-2018

./: .gitignore  Cargo.toml  Readme.md  run.sh  template.rs
1/: Cargo.toml  Makefile  main.rs
1/src/: main.rs
10/: Cargo.toml  debug.txt
10/src/: main.rs
11/: Cargo.toml
11/src/: main.rs
12/: Cargo.toml
12/src/: main.rs
13/: Cargo.toml
13/src/: main.rs
14/: Cargo.toml
14/src/: main.rs
15/: Cargo.toml
15/src/: main.rs
16/: Cargo.toml
16/src/: main.rs
17/: Cargo.toml  bootstrap.js  index.html  pkg  test_input_1.txt
17/src/: main.rs  shared.rs  web.rs
18/: Cargo.toml  pkg
18/src/: main.rs  shared.rs  web.rs
19/: Cargo.toml  breakdown.txt
19/src/: main.rs
2/: Cargo.toml  main.rs
2/src/: main.rs
20/: Cargo.toml  pkg  test_input_6.txt
20/src/: main.rs  shared.rs  web.rs
21/: Cargo.toml  breakdown.txt  debug.txt  debug2.txt  test.txt
21/src/: main.rs
22/: Cargo.toml  test_input_1.txt
22/src/: main.rs
23/: Cargo.toml
23/src/: main.rs
24/: Cargo.toml
24/src/: main.rs
25/: Cargo.toml
25/src/: main.rs
3/: Cargo.toml  main.rs
3/src/: main.rs
4/: Cargo.toml  debug.txt  main.rs
4/src/: main.rs
5/: Cargo.toml  main.rs
5/src/: main.rs
6/: Cargo.toml
6/src/: main.rs
7/: Cargo.toml
7/src/: main.rs
8/: Cargo.toml
8/src/: main.rs
9/: Cargo.toml
9/src/: main.rs
common/: Cargo.toml
common/src/: canvas.rs  coordinates.rs  lib.rs  wasm.rs
docs/: build.sh  index.html
docs/17/: index.html
docs/18/: index.html
docs/20/: index.html
docs/js/: utils.js
lib/: Cargo.toml
lib/src/: grid.rs  (+2 more)
(+22 files in other folders)
