[package]
name = "17"
version = "0.1.0"
authors = ["Dylan"]
edition = "2018"

[dependencies]
common = { path = "../common" }
regex = "1"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.5"

[lib]
name = "web"
path = "src/web.rs"
crate-type = ["cdylib", "rlib"]

[dependencies.web-sys]
version = "0.3"
features = [
  "console"
]