[package]
name = "18"
version = "0.1.0"
authors = ["Dylan"]
edition = "2018"

[dependencies]
common = { path = "../common" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.5"

[[bin]]
name = "18"

[lib]
name = "web18"
path = "src/web.rs"
crate-type = ["cdylib", "rlib"]

[dependencies.web-sys]
version = "0.3"
features = [
  "console"
]